use commons-codec instead of com.sun classes